--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,222 +1,6 @@
-@charset "UTF-8";
-/* Mixins */
-/* Styles
------------------------------------ */
-HTML, BODY {
-  height: 100%;
-}
-
-BODY {
-  margin: 0;
-  padding: 0;
-  background: black;
-  font-family: Arial;
-  font-size: 16px;
-}
-@media (max-width: 700px), (max-height: 350px) {
-  BODY {
-    font-size: 12px;
-  }
-}
-@media (max-width: 600px), (max-height: 250px) {
-  BODY {
-    font-size: 8px;
-  }
-}
-
-UL {
-  padding: 0;
-  margin: 0;
-}
-
-LI {
-  list-style: none;
-}
-
-.wrapper {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  margin: auto;
-  width: 100%;
-  height: 12em;
-  white-space: nowrap;
-  text-align: center;
-}
-.wrapper:before {
-  content: "";
-  display: inline-block;
-  height: 12em;
-  width: 20px;
-  vertical-align: middle;
-}
-
-/* Dottes
------------------------------------ */
-.dottes {
-  display: inline-block;
-  width: 1em;
-  margin: 0 1em;
-  background: transparent !important;
-  vertical-align: middle;
-  -webkit-transition: 0.5s;
-  transition: 0.5s;
-}
-.dottes:before, .dottes:after {
-  content: "";
-  display: block;
-  width: 1em;
-  height: 0;
-  border-bottom: 1em solid #151515;
-  -webkit-transition: border-color 0.5s;
-  transition: border-color 0.5s;
-}
-.dottes:before {
-  margin-bottom: 2em;
-}
-
-/* Digit
------------------------------------ */
-.digit {
-  display: inline-block;
-  width: 6em;
-  margin: 0 1em;
-  vertical-align: middle;
-}
-
-.clear {
-  clear: both;
-}
-
-.digit__item {
-  position: relative;
-  -webkit-transition: background 0.5s;
-  transition: background 0.5s;
-}
-.digit__item:before, .digit__item:after {
-  content: "";
-  display: block;
-  position: absolute;
-  width: 0;
-  height: 0;
-  border: 0.5em solid transparent;
-  -webkit-transition: border-color 0.5s;
-  transition: border-color 0.5s;
-}
-
-.item--h {
-  clear: both;
-  width: 3.4em;
-  height: 1em;
-  margin: 0 auto;
-}
-
-.item--1:before, .item--1:after {
-  border-bottom-color: transparent !important;
-}
-.item--1:before {
-  left: -1em;
-  border-left-color: transparent !important;
-}
-.item--1:after {
-  right: -1em;
-  border-right-color: transparent !important;
-}
-
-.item--4 {
-  width: 3.4em;
-  margin: 4em auto 0;
-}
-.item--4:before {
-  left: -0.5em;
-  border-left: 0;
-  border-top-color: transparent !important;
-  border-bottom-color: transparent !important;
-}
-.item--4:after {
-  right: -0.5em;
-  border-right: 0;
-  border-top-color: transparent !important;
-  border-bottom-color: transparent !important;
-}
-
-.item--7:before, .item--7:after {
-  border-top-color: transparent !important;
-}
-.item--7:before {
-  left: -1em;
-  border-left-color: transparent !important;
-}
-.item--7:after {
-  right: -1em;
-  border-right-color: transparent !important;
-}
-
-.item--v {
-  float: left;
-  width: 1em;
-  height: 3.4em;
-  margin: 0.3em 0;
-}
-.item--v:before {
-  top: -1em;
-}
-.item--v:after {
-  bottom: -1em;
-}
-
-.item--3,
-.item--6 {
-  float: right;
-}
-
-.item--2:before,
-.item--5:before {
-  border-top-color: transparent !important;
-  border-right-color: transparent !important;
-}
-.item--2:after,
-.item--5:after {
-  border-bottom-color: transparent !important;
-  border-right-color: transparent !important;
-}
-
-.item--3:before,
-.item--6:before {
-  border-top-color: transparent !important;
-  border-left-color: transparent !important;
-}
-.item--3:after,
-.item--6:after {
-  border-bottom-color: transparent !important;
-  border-left-color: transparent !important;
-}
-
-.item--2:after,
-.item--5:before {
-  border-left-color: transparent !important;
-}
-
-.item--3:after,
-.item--6:before {
-  border-right-color: transparent !important;
-}
-
-.item {
-  background: #151515;
-}
-.item:before, .item:after {
-  border-color: #151515;
-}
-
-.digit--sec {
-  vertical-align: text-bottom;
-  font-size: .5em;
-}
-@media (max-width: 600px) {
-  .digit--sec {
-    display: none;
-  }
-}
-
-/*# sourceMappingURL=style.unprefixed.css.map */
+/*!
+ * Name: time
+ * Project: Funny watches with Css and Js
+ * Author: yoksel
+ * Version: 0.0.0
+ */@charset "UTF-8";HTML,BODY{height:100%}BODY{margin:0;padding:0;background:#000;font-family:Arial;font-size:16px}@media (max-width:700px),(max-height:350px){BODY{font-size:12px}}@media (max-width:600px),(max-height:250px){BODY{font-size:8px}}UL{padding:0;margin:0}LI{list-style:none}.wrapper{position:absolute;top:0;bottom:0;margin:auto;width:100%;height:12em;white-space:nowrap;text-align:center}.wrapper:before{content:"";height:12em;width:20px}.wrapper:before,.dottes{display:inline-block;vertical-align:middle}.dottes{width:1em;margin:0 1em;background:transparent!important;-webkit-transition:.5s;transition:.5s}.dottes:before,.dottes:after{content:"";display:block;width:1em;height:0;border-bottom:1em solid #151515;-webkit-transition:border-color .5s;transition:border-color .5s}.dottes:before{margin-bottom:2em}.digit{display:inline-block;width:6em;margin:0 1em;vertical-align:middle}.clear{clear:both}.digit__item{position:relative;-webkit-transition:background .5s;transition:background .5s}.digit__item:before,.digit__item:after{content:"";display:block;position:absolute;width:0;height:0;border:.5em solid transparent;-webkit-transition:border-color .5s;transition:border-color .5s}.item--h{clear:both;width:3.4em;height:1em;margin:0 auto}.item--1:before,.item--1:after{border-bottom-color:transparent!important}.item--1:before{left:-1em;border-left-color:transparent!important}.item--1:after{right:-1em;border-right-color:transparent!important}.item--4{width:3.4em;margin:4em auto 0}.item--4:before{left:-.5em;border-left:0;border-top-color:transparent!important}.item--4:before,.item--4:after{border-bottom-color:transparent!important}.item--4:after{right:-.5em;border-right:0}.item--4:after,.item--7:before,.item--7:after{border-top-color:transparent!important}.item--7:before{left:-1em;border-left-color:transparent!important}.item--7:after{right:-1em;border-right-color:transparent!important}.item--v{float:left;width:1em;height:3.4em;margin:.3em 0}.item--v:before{top:-1em}.item--v:after{bottom:-1em}.item--3,.item--6{float:right}.item--2:before,.item--5:before{border-top-color:transparent!important;border-right-color:transparent!important}.item--2:after,.item--5:after{border-bottom-color:transparent!important;border-right-color:transparent!important}.item--3:before,.item--6:before{border-top-color:transparent!important;border-left-color:transparent!important}.item--3:after,.item--6:after{border-bottom-color:transparent!important}.item--3:after,.item--6:after,.item--2:after,.item--5:before{border-left-color:transparent!important}.item--3:after,.item--6:before{border-right-color:transparent!important}.item{background:#151515}.item:before,.item:after{border-color:#151515}.digit--sec{vertical-align:text-bottom;font-size:.5em}@media (max-width:600px){.digit--sec{display:none}}
